tests/compile_fail/error_1.stderr
error[E0271]: type mismatch resolving `<Recv<i32, End> as Protocol>::Dual == Recv<i32, End>`
  --> tests/compile_fail/error_1.rs:85:40
   |
85 |     verify_dual_protocols(client_chan, server_chan);
   |     ---------------------              ^^^^^^^^^^^ expected `Recv<i32, End>`, found `Send<i32, End>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected struct `Recv<i32, sez::proto::End>`
              found struct `sez::proto::Send<i32, sez::proto::End>`
note: required by a bound in `verify_dual_protocols`
  --> tests/compile_fail/error_1.rs:95:17
   |
90 | fn verify_dual_protocols<P, Q, IO1, IO2>(_chan1: Chan<P, IO1>, _chan2: Chan<Q, IO2>)
   |    --------------------- required by a bound in this function
...
95 |     Q: Protocol<Dual = P>  // This is the key constraint that should fail
   |                 ^^^^^^^^ required by this bound in `verify_dual_protocols`
